# message-io

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
benches/: latency.rs
docs/: basic_concepts.md
examples/distributed/: discovery_server.rs  participant.rs
examples/file-transfer/: common.rs  main.rs  receiver.rs  sender.rs
examples/ping-pong/: client.rs  main.rs  server.rs
examples/throughput/: main.rs
src/: adapters.rs  events.rs  lib.rs  net_packet.rs  network.rs  node.rs  node_event.rs  node_event_emitter.rs  util.rs  waker_command.rs
src/adapters/: framed_tcp.rs  ssl.rs  tcp.rs  template.rs  udp.rs  ws.rs
src/adapters/ssl/: ssl_acceptor.rs  ssl_adapter.rs  ssl_connector.rs  ssl_driver.rs  ssl_remote.rs  ssl_stream.rs
src/adapters/tcp/: tcp_adapter.rs  tcp_driver.rs  tcp_remote.rs
src/adapters/ws/: client.rs  error.rs  server.rs  ws_adapter.rs  ws_driver.rs  ws_remote.rs  ws_stream.rs
src/adapters/ws/handshake/: client.rs  headers.rs  machine.rs  mod.rs  server.rs
src/adapters/ws/protocol/: message.rs  mod.rs
src/adapters/ws/protocol/frame/: frame.rs  mod.rs
src/net_packet/: conn_id.rs  net_packet_impl.rs
src/network/: adapter.rs  driver.rs  endpoint.rs  loader.rs  net_event.rs  poll.rs  registry.rs  remote_addr.rs  resource_id.rs  transport.rs  waker_command.rs
src/util/: encoding.rs  thread.rs  unsafe_any.rs
tests/: integration.rs
