[package]
name = "message-io"
version = "0.17.0"
authors = ["lemunozm <lemunozm@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Fast and easy-to-use event-driven network library"
homepage = "https://github.com/lemunozm/message-io/"
repository = "https://github.com/lemunozm/message-io/"
keywords = ["network", "message", "events", "non-blocking", "tcp"]
categories = ["asynchronous", "game-development", "network-programming", "rust-patterns", "web-programming::websocket"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tcp", "ssl"]
tcp = ["mio/net", "socket2"]
ssl = ["mio/net", "socket2", "rustls-tls-native-roots"]
#ssl = ["mio/net", "socket2", "rustls-tls-webpki-roots"]
websocket = ["tungstenite", "url", "tcp"]
rustls-tls-native-roots = ["rustls", "rustls-native-certs", "pki-types", "rustls-pemfile"]
rustls-tls-webpki-roots = ["rustls", "webpki-roots", "pki-types", "rustls-pemfile"]

[dependencies]
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
log = "0.4"
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"], optional = true}
strum = { version = "0.24", features = ["derive"] }
socket2 = { version = "0.5", features = ["all"], optional = true}
url = { version = "2", optional = true }
integer-encoding = "3"
lazy_static = "1"
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"], default-features = false }
webpki-roots = { version = "0.26", optional = true }

bytemuck = { path = "../bytemuck", features = ["derive"] }
bytes = { path = "../bytes", default-features = false }
hashbrown = { path="../hashbrown" }
http = { path = "../http" }
mio = { path="../mio", features = ["os-poll"] }
net_packet = { path = "../net_packet-rs" }
opool = { path = "../opool" }
parking_lot = { path = "../parking_lot" }
pinky-swear = { path = "../pinky-swear" }
rustls = { path = "../rustls/rustls", optional = true }
rustls-native-certs = { path = "../rustls-native-certs", optional = true }
rustls-pemfile = { path = "../pemfile", optional = true }
tungstenite = { path = "../tungstenite-rs", optional = true }

[target.'cfg(target_os = "linux")'.dependencies.nix]
version = "0.26"
default-features = false
features = ["socket", "uio", "net"]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"
default-features = false

[dev-dependencies]
bincode = "1"
criterion = "0.4"
chrono = { version = "0.4", features = ["clock"], default-features = false }
test-case = "3"
rand = { path = "../rand" }
httparse = { path = "../httparse" }
my_logger = { path = "../my_logger-rs" }
doc-comment = "0.3"

[[bench]]
name = "latency"
harness = false
